// Copyright 2018 EAP

#ifndef COMMUNICATION_PROTOCOL_CARELINK_CONFIGURATION_H_
#define COMMUNICATION_PROTOCOL_CARELINK_CONFIGURATION_H_

namespace communication {
namespace protocol {

class CarelinkConfiguration {
  int carelink_identifier;
};

}  // namespace protocol
}  // namespace communication

#endif  // COMMUNICATION_PROTOCOL_CARELINK_CONFIGURATION_H_
